force-app/main/default/objects/Lead/fields/Risk_Member__c.field-meta.xml
<CustomField>
    <fullName>Risk_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>