force-app/main/default/objects/Lead/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <inlineHelpText>Sector / Industry</inlineHelpText>
    <label>Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Minerals</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Food Products, Beverage &amp; Tobacco</fullName>
                <label>Food Products &amp; Beverage &amp; Tobacco</label>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Technology Hardware &amp; Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>