force-app/main/default/objects/Lead/fields/Specific_Good_Traded__c.field-meta.xml
<CustomField>
    <fullName>Specific_Good_Traded__c</fullName>
    <label>Specific Goods Traded</label>
    <type>TextArea</type>
</CustomField>