force-app/main/default/objects/Lead/fields/Strategic_Role__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Role</label>
    <type>Checkbox</type>
</CustomField>