force-app/main/default/objects/Lead/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <inlineHelpText>Company ( supplier ) who submitted a new buyer</inlineHelpText>
    <label>Submitted by (Supplier)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>