force-app/main/default/objects/Lead/fields/Supplier_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discount_Rate__c</fullName>
    <defaultValue>0.09</defaultValue>
    <inlineHelpText>Annual Rate / This value is excluded from 3-Month SOFR / EURIBOR / Daily SONIA</inlineHelpText>
    <label>Supplier Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>