force-app/main/default/objects/Lead/fields/Supplier_lead__c.field-meta.xml
<CustomField>
    <fullName>Supplier_lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads (Supplier lead)</relationshipLabel>
    <relationshipName>Supplier_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>