force-app/main/default/objects/Lead/fields/Supplier_Lead_Empty__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Lead_Empty__c</fullName>
    <formula>IF(  ISBLANK( Supplier_lead__c ) , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Lead Empty</label>
    <type>Checkbox</type>
</CustomField>