force-app/main/default/objects/Lead/fields/Temp_Force_Funder_record_type__c.field-meta.xml
<CustomField>
    <fullName>Temp_Force_Funder_record_type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to mass update Funder Lead Record type</description>
    <label>Temp Force Funder record type</label>
    <type>Checkbox</type>
</CustomField>