force-app/main/default/objects/Lead/fields/Term_sheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Term_sheet_Sent__c</fullName>
    <formula>IF ( ISBLANK(Date_Termsheet_Sent__c) ,FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term sheet Sent</label>
    <type>Checkbox</type>
</CustomField>