force-app/main/default/objects/Lead/fields/Term_Sheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Signed__c</fullName>
    <formula>IF( ISBLANK( Date_Termsheet_Signed__c ) , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Sheet Signed</label>
    <type>Checkbox</type>
</CustomField>