force-app/main/default/objects/Lead/fields/Termsheet_Approved_By_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Approved_By_Sales_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This to use in approval process and validate before sending an Termsheet to client</description>
    <label>Termsheet Approved By Sales Head</label>
    <type>Checkbox</type>
</CustomField>