force-app/main/default/objects/Lead/fields/Termsheet_Potential_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Potential_Buyers__c</fullName>
    <label>Termsheet Potential Buyers</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>