force-app/main/default/objects/Lead/fields/Termsheet_Rejected_By_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Rejected_By_Sales_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termsheet Rejected By Sales Head</label>
    <type>Checkbox</type>
</CustomField>