force-app/main/default/objects/Lead/fields/Termsheet_Sent_to_Potential_Buyers__c.field-meta.xml
<CustomField>
    <fullName>Termsheet_Sent_to_Potential_Buyers__c</fullName>
    <label>Termsheet Sent to Potential Buyers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>