force-app/main/default/objects/Lead/fields/TMP__c.field-meta.xml
<CustomField>
    <fullName>TMP__c</fullName>
    <label>TMP-3rd party telemarketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accelerando</fullName>
            </value>
            <value>
                <fullName>Devonshire Warwick Capital</fullName>
            </value>
            <value>
                <fullName>Mont-Blanc Wealth Mgt Svc AG</fullName>
            </value>
            <value>
                <fullName>Chevallion Advisors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>