force-app/main/default/objects/Lead/fields/Trade_Currency__c.field-meta.xml
<CustomField>
    <fullName>Trade_Currency__c</fullName>
    <label>Trade Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCY</valueSetName>
    </valueSet>
</CustomField>