force-app/main/default/objects/Lead/fields/Trade_Partner_Annual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Trade_Partner_Annual_Fees__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Trade Partner Annual Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>