force-app/main/default/objects/Lead/fields/Type_for_Upload__c.field-meta.xml
<CustomField>
    <fullName>Type_for_Upload__c</fullName>
    <inlineHelpText>Manual field when mass upload lead funder</inlineHelpText>
    <label>Type for Upload</label>
    <type>TextArea</type>
</CustomField>