force-app/main/default/objects/Lead/fields/VAT_or_D_B__c.field-meta.xml
<CustomField>
    <fullName>VAT_or_D_B__c</fullName>
    <label>VAT or D&amp;B</label>
    <length>100</length>
    <type>Text</type>
</CustomField>