force-app/main/default/objects/Lead/fields/Yield__c.field-meta.xml
<CustomField>
    <fullName>Yield__c</fullName>
    <label>Yield</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>