force-app/main/default/objects/Lead/fields/Zone_1__c.field-meta.xml
<CustomField>
    <fullName>Zone_1__c</fullName>
    <defaultValue>&quot;Brunei Darussalam, Cambodia, Indonesia, Laos, Malaysia, Myanmar, Philippines, Singapore, Thailand, Vietnam&quot;</defaultValue>
    <inlineHelpText>Zone 1 countries</inlineHelpText>
    <label>Zone 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>