force-app/main/default/objects/Lead/fields/Zone_2__c.field-meta.xml
<CustomField>
    <fullName>Zone_2__c</fullName>
    <defaultValue>&quot;China, Mongolia, North Korea, South Korea, Japan, Hong Kong, Taiwan, Macau&quot;</defaultValue>
    <inlineHelpText>Zone 2 Countries</inlineHelpText>
    <label>Zone 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>