force-app/main/default/objects/Lead/fields/Zone_3__c.field-meta.xml
<CustomField>
    <fullName>Zone_3__c</fullName>
    <defaultValue>&quot;Algeria, Bahrain, the Comoros Islands, Djibouti, Egypt, Iraq, Jordan, Kuwait, Lebanon, Libya, Morocco, Mauritania, Oman, Palestine, Qatar, Saudi Arabia, Somalia, Sudan, Syria, Tunisia, the United Arab Emirates,Yemen,India, Pakistan, Bangladesh, Sri Lanka, Nepal, Afghanistan, Bhutan, Maldives&quot;</defaultValue>
    <inlineHelpText>Zone 3 country</inlineHelpText>
    <label>Zone 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>