force-app/main/default/objects/Lead/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>IF(  CONTAINS( Owner:User.Zone__c , &quot;1&quot;), &quot;1&quot;,
IF(  CONTAINS( Owner:User.Zone__c , &quot;2&quot;), &quot;2&quot;,
IF(  CONTAINS( Owner:User.Zone__c , &quot;3&quot;), &quot;3&quot;,
IF(  CONTAINS( Owner:User.Zone__c , &quot;4&quot;), &quot;4&quot;,
IF(  CONTAINS( Owner:User.Zone__c , &quot;5&quot;), &quot;5&quot;,&quot;N/A&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Zone based on User Zone</inlineHelpText>
    <label>Zone</label>
    <type>Text</type>
</CustomField>