force-app/main/default/objects/Lead/recordTypes/lead_Agent_Origination.recordType-meta.xml
<RecordType>
    <fullName>lead_Agent_Origination</fullName>
    <active>true</active>
    <businessProcess>Lead Agent Origination</businessProcess>
    <description>Lead Agent Origination</description>
    <label>lead Agent Origination</label>
</RecordType>