force-app/main/default/objects/Lead/recordTypes/Lead_buyer.recordType-meta.xml
<RecordType>
    <fullName>Lead_buyer</fullName>
    <active>true</active>
    <businessProcess>Lead New Buyer Credit limit Credit Limit Check</businessProcess>
    <label>Lead Buyer</label>
</RecordType>