force-app/main/default/objects/Lead/recordTypes/Lead_Funder.recordType-meta.xml
<RecordType>
    <fullName>Lead_Funder</fullName>
    <active>true</active>
    <businessProcess>Lead New Funder</businessProcess>
    <description>Funder Type</description>
    <label>Lead Funder</label>
</RecordType>