force-app/main/default/objects/Lead/recordTypes/Lead_Investor.recordType-meta.xml
<RecordType>
    <fullName>Lead_Investor</fullName>
    <active>true</active>
    <businessProcess>Lead Investor</businessProcess>
    <label>Lead Investor</label>
</RecordType>