force-app/main/default/objects/Lead/recordTypes/Lead_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Lead_Supplier</fullName>
    <active>true</active>
    <businessProcess>Lead New Supplier</businessProcess>
    <label>Lead Supplier</label>
</RecordType>