force-app/main/default/objects/Lead/recordTypes/RAIF.recordType-meta.xml
<RecordType>
    <fullName>RAIF</fullName>
    <active>true</active>
    <businessProcess>Lead RAIF</businessProcess>
    <description>For RAIF Leads</description>
    <label>Lead RAIF</label>
</RecordType>