force-app/main/default/objects/Lead/listViews/AJOUL_Funders_Leads.listView-meta.xml
<ListView>
    <fullName>AJOUL_Funders_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>AJOUL Funders Leads</label>
</ListView>