force-app/main/default/objects/Lead/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Date_Credit_Limit_Requested_by_Risk__c</columns>
    <columns>Credit_Limit_Provided_by_Insurer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Credit_Limit_Provided_by_Insurer__c</field>
        <operation>greaterOrEqual</operation>
        <value>2000000</value>
    </filters>
    <filters>
        <field>Date_Credit_Limit_Requested__c</field>
        <operation>greaterThan</operation>
        <value>7/1/2021</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>notContain</operation>
        <value>AE,India,Singapore,HK,Brazil,SG,South Korea,Taiwan,China,Qatar,HongKong</value>
    </filters>
    <label>All</label>
</ListView>