force-app/main/default/objects/Lead/listViews/Copy_of_Leads_UAE.listView-meta.xml
<ListView>
    <fullName>Copy_of_Leads_UAE</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Product_type__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>dogge</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>united arab</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>kuwait</value>
    </filters>
    <filters>
        <field>LEAD.COUNTRY</field>
        <operation>contains</operation>
        <value>Saudi</value>
    </filters>
    <label>Leads Middle East</label>
    <sharedTo>
        <group>Group_Funding</group>
    </sharedTo>
</ListView>