force-app/main/default/objects/Lead/listViews/Copy_of_Sales_Origination_Z4.listView-meta.xml
<ListView>
    <fullName>Copy_of_Sales_Origination_Z4</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Zone__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Product_type__c</field>
        <operation>equals</operation>
        <value>Supplier Factoring,Buyer Reverse Factoring,Agent</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Sales Origination  Z3</label>
</ListView>