force-app/main/default/objects/Lead/listViews/Credit_Limit_list.listView-meta.xml
<ListView>
    <fullName>Credit_Limit_list</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Credit_Limit_Provided_by_Insurer__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Product_type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>Potential_Supplier_s__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_type__c</field>
        <operation>equals</operation>
        <value>Buyer Reverse Factoring,Buyer Factoring</value>
    </filters>
    <filters>
        <field>Credit_Limit_Provided_by_Insurer__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Credit Limit list</label>
</ListView>