force-app/main/default/objects/Lead/listViews/David_Gan_Lead.listView-meta.xml
<ListView>
    <fullName>David_Gan_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Credit_Limit_Provided_by_Insurer__c</columns>
    <columns>Credit_Limit_Request_Approved__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Gan,Tao</value>
    </filters>
    <filters>
        <field>Date_Credit_Limit_Requested__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2022</value>
    </filters>
    <label>David Gan Lead</label>
</ListView>