force-app/main/default/objects/Lead/listViews/Lead_Arpita_LC.listView-meta.xml
<ListView>
    <fullName>Lead_Arpita_LC</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Potential_Supplier_s__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Arpita</value>
    </filters>
    <label>Lead Arpita LC</label>
</ListView>