force-app/main/default/objects/Lead/listViews/Lead_Bangladesh.listView-meta.xml
<ListView>
    <fullName>Lead_Bangladesh</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Asif</value>
    </filters>
    <filters>
        <field>Mass_Upload__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lead Bangladesh</label>
</ListView>