force-app/main/default/objects/Lead/listViews/Lead_Harry.listView-meta.xml
<ListView>
    <fullName>Lead_Harry</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Product_type__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Potential_Supplier_s__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Harry</value>
    </filters>
    <label>Lead Harry</label>
</ListView>