force-app/main/default/objects/Lead/listViews/Lead_Harry_Agent.listView-meta.xml
<ListView>
    <fullName>Lead_Harry_Agent</fullName>
    <booleanFilter>2 AND 1 AND 3</booleanFilter>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Product_type__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COUNTRY</columns>
    <columns>Broker_Company_Name__c</columns>
    <columns>Potential_Supplier_s__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_type__c</field>
        <operation>equals</operation>
        <value>Supplier Factoring,Buyer Reverse Factoring,Buyer Factoring</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Vincent</value>
    </filters>
    <filters>
        <field>Broker_Company_Name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Lead Harry Agent</label>
</ListView>